FINERACT-2234: Replace in-memory transaction loops with repository queries